# ansible-role-jetbrains-projector

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
molecule/uninstall/: converge.yml  molecule.yml  prepare.yml  verify.yml
tasks/: centos.yml  debian.yml  main.yml
tasks/files/: ide.service.j2  idempotency_readme.md
tasks/lib/: install.yml  service.yml  uninstall.yml  update_configs.yml  validate.yml
vars/: main.yml
