[tool.poetry]
name = "artis3n.jetbrains_projector"
version = "1.1.2"
description = "Install and configure Jetbrains Projector servers with Ansible."
authors = ["Artis3n <dev@artis3nal.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.7.1"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.0.2"
pre-commit = "^2.19.0"
molecule = {extras = ["docker"], version = "^3.6.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
