[tool.poetry]
name = "artis3n.jetbrains_projector"
version = "1.1.2"
description = "Install and configure Jetbrains Projector servers with Ansible."
authors = ["Artis3n <dev@artis3nal.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^6.2.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.5.1"
pre-commit = "^2.20.0"
molecule = {extras = ["docker"], version = "^4.0.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
